--- a/src/app/jugador/index/index.component.html
+++ b/src/app/jugador/index/index.component.html
@@ -1,3 +1,9 @@
-<p>
-  index works!
-</p>
+<div>
+    <div>
+      <customer-list></customer-list>
+    </div>
+    <div>
+    <customer-add></customer-add>
+    </div>
+    </div>
+    
